<resources>
    <string name="app_name">SAP</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="application_filup">Application Form</string>
    <string name="course_details">Course Details</string>
    <string name="user_image">Welcome User</string>
    <string name="parent_name">Parent/Guardian Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_name">Student Name</string>
    <string name="school_name">School Name</string>
    <string name="home_address">Home Address</string>
    <string name="city_name">City\n</string>
    <string name="state_name">State</string>
    <string name="street_name">Street Address 1</string>
    <string name="street_address">Street Address 2</string>
    <string name="pin_code">Pin Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_input">Enter your Phone Number</string>
    <string name="twelfth_marks">12th Class Marks</string>
    <string name="tenth_marks">Madhyamik Marks</string>
    <string name="joint_marks">Entrance Test Marks Details</string>
    <string name="joint_full_marks">Enter Rank</string>
    <string name="course_willing_1">Course willing to Study (Preference 1)</string>
    <string name="course_willing_2">Course willing to Study (Preference 2)</string>
    <string name="course_willing_3">Course willing to Study (Preference 3)</string>
    <string name="course_willing_4">Course willing to Study (Preference 4)</string>
    <string name="course_willing_5">Course willing to Study (Preference 5)</string>
    <string name="college_willing">College willing to Study</string>
    <string name="course_willing_to_take">Engineering/Medical/Nursing/B-Pharm</string>
    <string name="btn_text">Submit Form</string>
    <string name="available_colleges">Available Colleges</string>
    <string name="available_courses">Courses Available</string>
    <string name="upload_button">Upload Documents</string>
    <string name="no_college_selected">Please Select A College To View The Courses.</string>
    <string name="single_page_header">Course Details</string>
    <string name="course_code">Course Code: %1$s</string>
    <string name="course_name">Course Name: %1$s</string>
    <string name="seat_capacity">Seat Capacity: %1$s</string>
    <string name="course_duration">Course Duration: %1$s</string>
    <string name="course_description">Course Description: %1$s</string>
    <string name="about_us_description">At SAP (Students Admission Point), we are dedicated to guiding aspiring students toward achieving their dreams. Specializing in career counseling and admission guidance, we help students secure admissions through management quota in top colleges and universities.\n\nOur expert counselors provide personalized advice tailored to each student’s aspirations, academic background, and career goals. With our deep understanding of admission processes and strong network, we ensure a seamless experience, empowering students to take the first step toward a successful future.\n\nLet us help you unlock the doors to your dream institution!</string>
    <string name="news">News</string>
    <string name="carousal">carousel</string>
    <string name="next">Let\'s Go</string>
    <string name="student_email">Provide an Email Id</string>
    <string name="student_email_hint">Enter Email</string>
    <string name="loginPrompt">LOGIN</string>
    <string name="loginText">Please enter your login and password!</string>
    <string name="username">Enter Full Name</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="student">For Student</string>
    <string name="admin">For Admin</string>
    <string name="institute">For Institute</string>
    <string name="upload_images">Upload Images</string>
    <string name="upload_news">Upload News</string>
    <string name="adminpanel_header">Admin Panel</string>
    <string name="previous">Previous</string>
    <string name="next_slide">Next</string>
    <string name="annoucementcd">Announcement</string>
    <string name="btn_make_announcement">Post Announcement</string>
    <string name="announcement_header">Announcement Heading</string>
    <string name="success">Dear Admin, Announcement posted Successfully.</string>
    <string name="save_login_details">LOGIN DETAILS</string>
    <string name="selected_courses">Courses Selected By You:</string>
    <string name="uploadMessage">"Please upload required documents. "</string>
    <string name="contact_us_text">Contact Us with your Queries. Give a Call to our career counsellor  -  +91 9774837504</string>
    <string name="userphone">Enter Phone Number</string>
    <string name="logout">Logout</string>
    <string name="uploadattachments">Upload Attachments</string>
    <string name="mention">Mention your Announcement</string>
    <string name="uploadMessage1">Upload PDFs/Images</string>
    <string name="uploadMessage2">Upload Slider Images</string>
    <string name="save_level">LEVEL OF SLIDE</string>
    <string name="shareApp">Share App Link</string>
    <string name="share_subject">Download Student Admission Point App From Playstore</string>
    <string name="share_using">Share Link to</string>
    <string name="upload_courses">Add Courses</string>
    <string name="submit_button">Submit\n</string>
    <string name="upload_brochures">Upload Brochures</string>
    <string name="waiting">Please Wait...</string>
    <string name="upload_receipt">Upload Payment Screenshot</string>
    <string name="aadhar_no">Aadhar Number</string>
    <string name="tenth_qualification">Tenth Qualification</string>
    <string name="roll_no">Roll Number</string>
    <string name="total_mark">Total Mark\n</string>
    <string name="obtained_mark">Obtained Mark</string>
    <string name="score_mark">Score</string>
    <string name="sc">SC</string>
    <string name="st">ST</string>
    <string name="obc">OBC</string>
    <string name="ur">UR</string>
    <string name="pwd">PWD</string>
    <string name="twelfth_qualification">Twelfth Qualification</string>
    <string name="passing_year">Passing Year</string>
    <string name="father_first_name">"Father\'s First Name"</string>
    <string name="fathers_last_name">"Father\'s Last Name"</string>
    <string name="mothers_first_name">"Mother\'s First Name"</string>
    <string name="mothers_last_name">"Mother\'s Last Name"</string>
    <string name="uploadaadhar">1. Upload Aadhar Card</string>
    <string name="uploadPancard">2. Upload Pancard</string>
    <string name="uploadTenthMarksheet">3. Upload Tenth Marksheet</string>
    <string name="uploadTwelfthApearing">"Upload Twelfth Apearing Certificate and/or Marksheet"</string>


</resources>