<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/about_us"
        android:icon="@drawable/ic_about_us"
        />
    <item
        android:id="@+id/newsFragment"
        android:title="@string/news"
        android:icon="@drawable/ic_about_us"
        />
    <item
        android:id="@+id/contactFragment"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_contact_us"/>
    <item
        android:id="@+id/applicationUploadFragment"
        android:title="@string/application_filup"
        android:icon="@drawable/ic_upload"/>
    <item
        android:id="@+id/courseDetailsFragment"
        android:title="@string/course_details"
        android:icon="@drawable/ic_course_info"/>
</menu>
