<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="16sp"
        android:id="@+id/uploadPrompt"
        android:text="@string/uploadMessage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadPrompt"
        android:layout_marginTop="8sp"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:textColor="@color/black"
        android:padding="16sp"
        android:text="@string/uploadaadhar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="4sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:textColor="@color/black"
        android:padding="16sp"
        android:text="@string/uploadPancard"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:id="@+id/uploadTenth"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="16sp"
        android:text="@string/uploadTenthMarksheet"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16sp"
            android:text="@string/uploadTwelfthApearing"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/upload_button"
        android:background="@color/purple_200"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:id="@+id/btnSelectFile"
        android:layout_centerInParent="true"
        android:layout_margin="64dp"/>
    <ProgressBar
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_gravity="center_vertical|center_horizontal"/>

</RelativeLayout>