<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:orientation="vertical"
     android:layout_weight="0.75">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="32sp"
    android:textStyle="bold"
    android:textColor="@color/purple_700"
    android:text="@string/loginPrompt"
    android:gravity="center_horizontal"
    android:layout_marginTop="32sp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:textSize="16sp"
    android:layout_marginTop="32sp"
    android:layout_gravity="center"
    android:textColor="@color/purple_700"
    android:gravity="center"
    android:text="@string/loginText"/>
 </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1.5">
<EditText
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:autofillHints="john@gmail.com"
    android:layout_marginLeft="32sp"
    android:layout_marginRight="32sp"
    android:id="@+id/useremail"
    android:layout_centerInParent="true"
    android:background="@drawable/edittext_bg_2"
    android:hint="@string/username"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp"
        android:background="@drawable/edittext_bg_2"
        android:layout_centerInParent="true"
        android:id="@+id/userpassword"
        android:layout_marginTop="32sp"
        android:layout_below="@id/useremail"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.75">
    <Button
        android:layout_width="172sp"
        android:layout_height="48sp"
        android:layout_margin="64sp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:id="@+id/loginBtn"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>