<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/announcement_header"
                android:hint="@string/announcement_header"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:layout_margin="16sp"
                android:drawablePadding="16sp"
                app:drawableLeftCompat="@drawable/pen"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/black"
                android:gravity="center|start"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/annoucementcd"
                    android:src="@drawable/announcement"
                    android:layout_marginTop="16sp"
                    android:padding="16sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="452sp"
                    android:id="@+id/announcement_to_make"
                    android:hint="@string/mention"
                    android:textSize="16sp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:layout_marginRight="16sp"
                    android:layout_marginTop="16sp"
                    android:layout_marginBottom="16sp"
                    android:background="@drawable/edittext_bg"
                    android:gravity="start"/>
            </LinearLayout>

    <TextView
        android:id="@+id/uploadPdf"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:drawableLeft="@drawable/attachmentsclip"
        android:gravity="center"
        android:text="@string/uploadattachments"
        android:textColor="@color/purple_700"
        android:textStyle="bold" />
            <Button
                android:layout_width="192sp"
                android:layout_height="48sp"
                android:layout_marginTop="8sp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:padding="8sp"
                android:id="@+id/post_announcement"
                android:text="@string/btn_make_announcement"
                android:layout_gravity="center_horizontal"/>

</LinearLayout>