<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center"
    android:textStyle="bold"
    android:textSize="20sp"
    android:textColor="#000000"
    android:text="@string/course_details"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center|start"
        android:textColor="#000000"
        android:text="@string/available_colleges">
    </TextView>
    <Spinner
        android:id="@+id/my_available_colleges"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_bg"
       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="@string/available_courses"
        android:layout_gravity="center"
        android:gravity="center|start"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/collegeNotSelected"
        android:layout_marginStart="16dp"
        android:textColor="@color/design_default_color_primary_variant"
        android:text="@string/no_college_selected"/>
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:numColumns="2"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none" />

</LinearLayout>